# tetris-cli

./: .audit_issue_register.md  .editorconfig  .env.example  .gitignore  .issue_register.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KODA.md  PERFORMANCE_AUDIT.md  PROJECT_VERIFICATION.md  QWEN.md  README.md  SECURITY.md  TESTS_REGISTRY.md  TEST_REPORT.md  TODO.md  clippy.toml  libtest_all_32_fixes.rlib  rustfmt.toml
.cline/memory/: fix_log_2026-03-06_check_rows.md  fix_log_20260308.md  fix_log_20260309_211124.md  qc_worker_2026-03-08.json  test_report_2026-03-07_12-00-00.json
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_AUDIT_SUMMARY.md  ARCHITECTURE_PROBLEMS_AND_SOLUTIONS.md  MIGRATIONS.md  USER_GUIDE.md  audit_report.md
src/: constants.rs  controls.rs  crypto.rs  errors.rs  exports.rs  game.rs  highscore.rs  io.rs  io_traits.rs  lib.rs  macros.rs  main.rs  menu.rs  terminal_backend.rs  test_fixes.rs  tetromino.rs  types.rs
src/app/: application.rs  mod.rs
src/config/: keys.rs  mod.rs
src/core/: mod.rs
src/crypto/: hmac.rs  validator.rs
src/game/: access.rs  board.rs  cache.rs  components.rs  constants.rs  cycle.rs  events.rs  logic.rs  mod.rs  mode_registry.rs  mode_trait.rs  render.rs  rules.rs  scoreboard.rs  scoring.rs  state.rs  stats.rs  time.rs  types.rs  view.rs
src/game/components/: animation_state.rs  board_state.rs  figure_manager.rs  figure_state.rs  mod.rs
src/game/logic/: collision.rs  input.rs  mod.rs  physics.rs  rotation.rs  update.rs  wall_kick.rs
src/game/render/: cache.rs  mod.rs
src/game/scoring/: combo.rs  lines.rs  mod.rs  points.rs
src/highscore/: leaderboard.rs  leaderboard_repository.rs  leaderboard_storage.rs  leaderboard_validator.rs  mod.rs  sanitize.rs  save_data.rs  storage.rs
src/io/: backend.rs  canvas.rs  key_reader.rs  mod.rs  terminal_backend.rs  termion_backend.rs
src/menu/: constants.rs  draw.rs  input.rs  mod.rs
src/testes/: audit_fixes_comprehensive.rs  mod.rs  test_25_fixes.rs  test_32_fixes_comprehensive.rs  test_achievements.rs  test_all_24_fixes.rs  test_all_32_fixes.rs  test_all_fixes.rs  test_all_fixes_integration.rs  test_animation.rs  test_architecture.rs  test_architecture_constraints.rs  test_architecture_fixes.rs  test_architecture_improvements.rs  test_architecture_integrity.rs  test_architecture_modularity.rs  test_architecture_new_modules.rs  test_architecture_refactoring.rs  test_audit_2026_03_28.rs  test_audit_current_fixes.rs  test_audit_fixes.rs  test_audit_fixes_prevention.rs  test_audit_fixes_verification.rs  test_bag_system.rs  test_benchmarks.rs  test_bounds_check_optimization.rs  test_cast_safety.rs  test_clippy_fixes.rs  test_code_audit_fixes.rs  test_code_quality.rs  test_code_quality_fixes.rs  test_collision.rs  test_constant_imports.rs  test_controls.rs  test_controls_detailed.rs  test_controls_error_handling.rs  test_controls_path_traversal.rs  test_controls_path_validation.rs  test_direction_down.rs  test_edge_cases.rs  (+68 more)
src/tests/: fixtures.rs  io_drop.rs  leaderboard_toctou.rs  macros.rs  mod.rs  scoring_state.rs  test_all_fixes_integration.rs  test_animation.rs  test_application_error_handling.rs  test_architecture.rs  test_architecture_boundaries.rs  test_architecture_components.rs  test_architecture_coupling.rs  test_architecture_cycles.rs  test_architecture_fixes.rs  test_architecture_fixes_new.rs  test_architecture_improvements.rs  test_architecture_integrity.rs  test_architecture_integrity_new.rs  test_architecture_isp.rs  test_architecture_new_modules.rs  test_architecture_refactoring.rs  test_architecture_separation.rs  test_architecture_traits.rs  test_architecture_validation.rs  test_audit_fixes_2026_03_30.rs  test_audit_fixes_comprehensive.rs  test_bag_system.rs  test_benchmarks.rs  test_boundary_values.rs  test_bounds_check_optimization.rs  test_canvas_initialization.rs  test_cast_safety.rs  test_cfg_attr_dead_code.rs  test_clippy_fixes.rs  test_collision.rs  test_constant_imports.rs  test_controls_error_handling.rs  test_controls_path_traversal.rs  test_controls_path_validation.rs  (+72 more)
src/tests/common/: mod.rs
src/tetromino/: bag_generator.rs  constants.rs  mod.rs  shape_type.rs  tetromino_struct.rs
src/util/: frame_timing.rs  mod.rs
src/validation/: mod.rs  name.rs  path.rs  service.rs
tests/: test_41_fixed_issues.rs  test_all_fixed_issues.rs  test_architecture_all.rs  test_architecture_components.rs  test_architecture_improvements.rs  test_architecture_integrity.rs  test_architecture_integrity_new.rs  test_architecture_refactoring.rs  test_audit_2026_04_fixes.rs  test_audit_fixes.rs  test_audit_fixes_all.rs  test_audit_fixes_verification.rs  test_fixes_verification.rs
tests/common/: mod.rs
