[package]
name = "tetris-cli"
version = "23.96.14"
edition = "2021"
description = "Классическая игра Тетрис для терминала Linux/Unix"
license = "GPL-3.0"
repository = "https://github.com/Githab-capibara/tetris-cli"
documentation = "https://github.com/Githab-capibara/tetris-cli/tree/master/docs"
readme = "README.md"
keywords = ["tetris", "game", "terminal", "cli", "rust"]
categories = ["games", "command-line-utilities"]

# Документация для rustdoc
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Feature для бенчмарков - используется в game.rs для методов *_for_bench
bench = []

[dependencies]
termion = "2.0"
rand = "0.9"
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
hex = "0.4"
libc = "0.2"
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
smallvec = "1.0"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

# Настройки линтера clippy
[lints.clippy]
# Рекомендуемые проверки
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Исключения для pedantic
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
# Исключения для тестов
doc_markdown = "allow"
unreadable_literal = "allow"
should_panic_without_expect = "allow"
needless_range_loop = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unnecessary_cast = "allow"
float_cmp = "allow"
used_underscore_binding = "allow"
assertions_on_constants = "allow"
uninlined_format_args = "allow"
io_other_error = "allow"
single_match = "allow"
let_and_return = "allow"
if_not_else = "allow"
match_same_arms = "allow"
used_underscore_items = "allow"
erasing_op = "allow"
identity_op = "allow"
unnecessary_to_owned = "allow"
# Исправление аудита 2026-03-31: удалены наименее критичные исключения
# Удалены: unnecessary_owned_empty_strings, unnecessary_literal_bound,
# manual_range_contains, single_char_pattern, redundant_pattern_matching,
# manual_unwrap_or, explicit_iter_loop, items_after_statements,
# no_effect_underscore_binding, useless_conversion

[lints.rust]
unused_variables = "allow"
unused_mut = "allow"
unused_comparisons = "allow"
