[package]
name = "tetris-cli"
version = "0.96.14"
edition = "2021"
rust-version = "1.85"
description = "Классическая игра Тетрис для терминала Linux/Unix"
license = "GPL-3.0-or-later"
repository = "https://github.com/Githab-capibara/tetris-cli"
documentation = "https://github.com/Githab-capibara/tetris-cli/tree/master/docs"
readme = "README.md"
keywords = ["tetris", "game", "terminal", "cli", "rust"]
categories = ["games", "command-line-utilities"]

# Документация для rustdoc
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Feature для бенчмарков - используется в game.rs для методов *_for_bench
bench = []

[dependencies]
termion = "2.0"
rand = "0.10"
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
hex = "0.4"
libc = "0.2"
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"

[dev-dependencies]
tempfile = "3.23"
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

# Оптимизации для release-сборки
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

# Базовая оптимизация для dev-сборки
[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
debug = true

# Настройки линтера clippy
[lints.clippy]
# Рекомендуемые проверки
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Критичные проверки безопасности
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
exit = "forbid"
# Исключения для cargo
multiple_crate_versions = "allow"
# Исключения для restriction (избыточно строгие для игрового проекта)
non_ascii_literal = "allow"
tests_outside_test_module = "allow"
default_numeric_fallback = "allow"
let_underscore_untyped = "allow"
let_underscore_must_use = "allow"
string_slice = "allow"
pattern_type_mismatch = "allow"
missing_asserts_for_indexing = "allow"
use_debug = "allow"
print_stderr = "allow"
print_stdout = "allow"
dbg_macro = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
doc_paragraphs_missing_punctuation = "allow"
integer_division = "allow"
modulo_arithmetic = "allow"
else_if_without_else = "allow"
decimal_literal_representation = "allow"
str_to_string = "allow"
single_match_else = "allow"
missing_assert_message = "allow"
lossy_float_literal = "allow"
multiple_inherent_impl = "allow"
unnecessary_safety_comment = "allow"
impl_trait_in_params = "allow"
min_ident_chars = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
integer_division_remainder_used = "allow"
wildcard_enum_match_arm = "allow"
verbose_file_reads = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
missing_const_for_fn = "allow"
match_like_matches_macro = "allow"
vec_init_then_push = "allow"
renamed_function_params = "allow"
bool_to_int_with_if = "allow"
unused_result_ok = "allow"
single_match = "allow"
manual_is_variant_and = "allow"
option_if_let_else = "allow"
equatable_if_let = "allow"
if_then_some_else_none = "allow"
bind_instead_of_map = "allow"
return_and_then = "allow"
pathbuf_init_then_push = "allow"
# Исключения для nursery/pedantic (тестовые и стилистические)
test_attr_in_doctest = "allow"
redundant_test_prefix = "allow"
field_scoped_visibility_modifiers = "allow"
pub_with_shorthand = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
unseparated_literal_suffix = "allow"
single_char_lifetime_names = "allow"
arbitrary_source_item_ordering = "allow"
trait_duplication_in_bounds = "allow"
same_name_method = "allow"
unused_trait_names = "allow"
# Исключения для assert/unwrap в тестах и критических местах
assertions_on_result_states = "allow"
missing_panics_doc = "allow"
panic_in_result_fn = "allow"
# Исключения для стиля кода
single_call_fn = "allow"
implicit_return = "allow"
missing_trait_methods = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
# Исключения для pedantic
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
# Исключения для тестов
doc_markdown = "allow"
unreadable_literal = "allow"
should_panic_without_expect = "allow"
needless_range_loop = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unnecessary_cast = "allow"
used_underscore_binding = "allow"
no_effect_underscore_binding = "allow"
absurd_extreme_comparisons = "allow"
items_after_statements = "allow"
unnecessary_literal_unwrap = "allow"
redundant_closure = "allow"
explicit_iter_loop = "allow"
manual_midpoint = "allow"
assertions_on_constants = "allow"
uninlined_format_args = "allow"
let_and_return = "allow"
if_not_else = "allow"
match_same_arms = "allow"
used_underscore_items = "allow"
unnecessary_to_owned = "allow"
# Исключения для restriction (избыточно строгие правила)
mod_module_files = "allow"
self_named_module_files = "allow"
pub_use = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
missing_inline_in_public_items = "allow"
absolute_paths = "allow"
ref_patterns = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
indexing_slicing = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
float_arithmetic = "allow"
partial_pub_fields = "allow"
# Исправление аудита 2026-03-31: удалены наименее критичные исключения
# Удалены: unnecessary_owned_empty_strings, unnecessary_literal_bound,
# manual_range_contains, single_char_pattern, redundant_pattern_matching,
# manual_unwrap_or, explicit_iter_loop, items_after_statements,
# no_effect_underscore_binding, useless_conversion

[lints.rust]
unused_comparisons = "allow"
missing_docs = "warn"
warnings = "deny"
unused_variables = "warn"
dead_code = "warn"
# dead_code убран из глобальных подавлений — используем #[allow(dead_code)] точечно
